--- a/index.html
+++ b/index.html
@@ -3500,8 +3500,8 @@
             </div>
 
             <address class="content">
-              419 State 414 Rte
-              Beaver Dams, New York(NY), 14812, USA
+              SVIT VASAD 
+               388306, ANAND
             </address>
           </li>
 
@@ -3510,7 +3510,7 @@
               <ion-icon name="call-outline"></ion-icon>
             </div>
 
-            <a href="tel:+607936-8058" class="footer-nav-link">(607) 936-8058</a>
+            <a href="tel:+607936-8058" class="footer-nav-link">+91 9099929535</a>
           </li>
 
           <li class="footer-nav-item flex">
@@ -3518,7 +3518,7 @@
               <ion-icon name="mail-outline"></ion-icon>
             </div>
 
-            <a href="mailto:example@gmail.com" class="footer-nav-link">example@gmail.com</a>
+            <a href="mailto:example@gmail.com" class="footer-nav-link">prathambhatt987@gmail.com</a>
           </li>
 
         </ul>
